--- a/ems-backend/src/main/resources/application.properties
+++ b/ems-backend/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=${db_url}
+spring.datasource.username=${db_username}
+spring.datasource.password=${db_password}
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
